--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Shift the overall look and feel by adding these wonderful touches to
             furniture in your home
           </h1>
-          <p class="text-present-2">
+          <p class="article-text text-present-2">
             Ever been in a room and felt like something was missing? Perhaps it
             felt slightly bare and uninviting. I’ve got some simple tips to help
             you make any room feel complete.
